--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_bloc: ^4.0.0
   meta: ^1.1.6
   equatable: ^1.0.0
-
+  google_maps_flutter: ^0.5.27+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
